--- a/video.html
+++ b/video.html
@@ -2,11 +2,10 @@
 
 <html lang="pt-BR">
 
-    
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link data-optimized="1" rel="stylesheet" href="assets/css/5921624bf5bbe4c8c091ef09226fa76f.css">
         <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -72,8 +71,8 @@
     
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script>
+<!--     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
+<!--         <script>
             jQuery(document).ready(function(){
             function limpaUrl() {     //função
                 urlpg = $(location).attr('href');   //pega a url atual da página
@@ -111,7 +110,7 @@
                     window.location.href = "saquebbd2.html?utm_source="+utm;
                 }, 1000);
             };
-        </script>
+        </script> -->
 
         <script>
             var message="";
@@ -158,7 +157,7 @@
             $('.atraso').hide();
             setTimeout(function() {
             $('.atraso').show();
-            }, 2000);    //510000
+            }, 5000);    //510000
         </script>
 
 
