--- a/cadastro.html
+++ b/cadastro.html
@@ -52,7 +52,7 @@
                     Assista um curto vídeo com um passo a passo explicativo para você aprender a cadastrar sua chave <b>PIX</b> e realizar o seu primeiro <b>SAQUE.</b></label>
 
                 </form>
-                <a href="/video.html"><button  class="enviarCodigo" style="font-size: 20px;">ASSISTIR VÍDEO</button></a>
+                <a href="video.html"><button  class="enviarCodigo" style="font-size: 20px;">ASSISTIR VÍDEO</button></a>
                 </div>
             </div>
 
