--- a/api2.html
+++ b/api2.html
@@ -59,13 +59,13 @@
                 <span class="popup-text" style="font-size: 20px;">pelo código da Apple</span>
             </div>
         </div>
-        <script>
+<!--         <script>
             setTimeout(
                 ()=>{
                     window.location.href='codappd41d.html?'
                 }, 6000
             )
-            </script>
+            </script> -->
 
         <script src="../ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src="../cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
