--- a/api.html
+++ b/api.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="pt-BR">
-
-    
-<!-- Mirrored from codigosmoney.app/sucesso.php? by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 11 Dec 2023 14:04:43 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -137,7 +134,6 @@
                     return false;
                 }
             };
-
 
             //    CTRL + u
             //==============
