--- a/cadastro.html
+++ b/cadastro.html
@@ -1,152 +1,172 @@
 <!DOCTYPE html>
 
 <html lang="pt-BR">
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      data-optimized="1"
+      rel="stylesheet"
+      href="assets/css/5921624bf5bbe4c8c091ef09226fa76f.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com/" />
+    <meta name="author" content="Daanrox" />
+    <meta name ="theme-color" content="#21983c"/>
+    <meta name="description" content="Códigos Lucrativos" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link
+      data-optimized="1"
+      href="assets/css/1c7a3d2ee9759dc256d915300855c494.css"
+      rel="stylesheet"
+    />
+    <link
+      data-optimized="1"
+      href="assets/css/ba9cbbe9240a489628be8eb27c56db8a.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/animated.css" />
+    <link rel="icon" href="./assets/images/meta/money.png" />
+    <title>Codigos Lucrativos</title>
+  </head>
 
-    
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-<head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link data-optimized="1" rel="stylesheet" href="assets/css/5921624bf5bbe4c8c091ef09226fa76f.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com/">
-        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-        <link data-optimized="1" href="assets/css/1c7a3d2ee9759dc256d915300855c494.css" rel="stylesheet">
-        <link data-optimized="1" href="assets/css/ba9cbbe9240a489628be8eb27c56db8a.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="assets/css/animated.css">
-        <title>Codigos Lucrativos</title>
-
-        <script>
-            !function(e,t){"object"==typeof exports&&"object"==typeof module?module.exports=t():"function"==typeof define&&define.amd?define([],t):"object"==typeof exports?exports.install=t():e.install=t()}(window,(function(){return function(e){var t={};function n(r){if(t[r])return t[r].exports;var o=t[r]={i:r,l:!1,exports:{}};return e[r].call(o.exports,o,o.exports,n),o.l=!0,o.exports}return n.m=e,n.c=t,n.d=function(e,t,r){n.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},n.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"_esModule",{value:!0})},n.t=function(e,t){if(1&t&&(e=n(e)),8&t)return e;if(4&t&&"object"==typeof e&&e&&e.esModule)return e;var r=Object.create(null);if(n.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:e}),2&t&&"string"!=typeof e)for(var o in e)n.d(r,o,function(t){return e[t]}.bind(null,o));return r},n.n=function(e){var t=e&&e.esModule?function(){return e.default}:function(){return e};return n.d(t,"a",t),t},n.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},n.p="",n(n.s=0)}([function(e,t,n){"use strict";var r=this&&this._spreadArray||function(e,t,n){if(n||2===arguments.length)for(var r,o=0,i=t.length;o<i;o++)!r&&o in t||(r||(r=Array.prototype.slice.call(t,0,o)),r[o]=t[o]);return e.concat(r||Array.prototype.slice.call(t))};!function(e){var t=window;t.KwaiAnalyticsObject=e,t[e]=t[e]||[];var n=t[e];n.methods=["page","track","identify","instances","debug","on","off","once","ready","alias","group","enableCookie","disableCookie"];var o=function(e,t){e[t]=function(){var n=Array.from(arguments),o=r([t],n,!0);e.push(o)}};n.methods.forEach((function(e){o(n,e)})),n.instance=function(e){var t=n._i[e]||[];return n.methods.forEach((function(e){o(t,e)})),t},n.load=function(t,r){n._i=n._i||{},n._i[t]=[],n._i[t]._u="../s1.kwai.net/kos/s101/nlav11187/pixel/events.js",n._t=n._t||{},n._t[t]=+new Date,n._o=n._o||{},n._o[t]=r||{};var o=document.createElement("script");o.type="text/javascript",o.async=!0,o.src="../s1.kwai.net/kos/s101/nlav11187/pixel/events81f7.js?sdkid="+t+"&lib="+e;var i=document.getElementsByTagName("script")[0];i.parentNode.insertBefore(o,i)}}("kwaiq")}])}));
-            </script>
-            <script>
-            kwaiq.load('548880775249661984');
-            kwaiq.page();
-        </script>
-    </head>
-
-    <body>
-
-        <div class="menu">
-            <a><img src="assets/images/logo.png"></a>
-            <div class="buttons-container">
-                <div class="valor-box">
-                    <span id="valor" style="font-family: 'Montserrat', sans-serif;">R$ 205.50</span>
-                </div>
-            </div>
+  <body>
+    <div class="menu">
+      <a><img src="assets/images/logo.png" /></a>
+      <div class="buttons-container">
+        <div class="valor-box">
+          <span id="valor" style="font-family: 'Montserrat', sans-serif"
+            >R$ 205.50</span
+          >
         </div>
+      </div>
+    </div>
 
-        <div style="margin-bottom: 100px;"></div>
+    <div style="margin-bottom: 100px"></div>
 
+    <div id="p1" style="display: block">
+      <div style="margin-bottom: 20px"></div>
 
-        <div id="p1" style="display: block;">
-
-            <div style="margin-bottom: 20px;"></div>
-
-            <div class="white-box">
-                <div class="row">
-                    <form method="POST" id="formPix" onsubmit="document.getElementById('submit').disabled = true;">
-
-                    <label style="background-color: #e2e8ef; padding: 10px; border-radius: 12px; text-align: center; width: 100%; margin-bottom: 10px; margin-top: 20px; line-height: 1.3rem; padding-top: 20px; font-size: 20px; padding-bottom: 20px;"><span style="font-size: 25px; font-weight: bold;">PARABÉNS</span><br /><br /> Você acaba de ganhar <b>R$ 205,50.</b><br /><br />
-                    Assista um curto vídeo com um passo a passo explicativo para você aprender a cadastrar sua chave <b>PIX</b> e realizar o seu primeiro <b>SAQUE.</b></label>
-
-                </form>
-                <a href="video.html"><button  class="enviarCodigo" style="font-size: 20px;">ASSISTIR VÍDEO</button></a>
-                </div>
-            </div>
-
-            <div class="popup-container" id="popupB1">
-                <script data-optimized="1" src="assets/js/c53f77ae20425ecce9172a7e108fa681.js"></script>
-                <lord-icon src="assets/json/xzksbhzh.json" trigger="loop" delay="1000" colors="primary:#08a88a,secondary:#ebe6ef" style="width:125px;height:125px; display: flex; margin: 0 auto;"></lord-icon>
-                <span class="popup-text" style="font-size: 20px;">Saldo atualizado!</span>
-                <span class="popup-text" style="font-size: 20px;">Você recebeu:</span>
-                <span class="popup-text" style="font-size: 40px; font-weight: bold; font-family: 'Montserrat', sans-serif; margin-top: -20px;">R$ 27,00</span>
-                <span class="popup-text" style="font-size: 20px;">pelo código da Apple</span>
-            </div>
+      <div class="white-box">
+        <div class="row">
+          <form
+            method="POST"
+            id="formPix"
+            onsubmit="document.getElementById('submit').disabled = true;"
+          >
+            <label
+              style="
+                background-color: #e2e8ef;
+                padding: 10px;
+                border-radius: 12px;
+                text-align: center;
+                width: 100%;
+                margin-bottom: 10px;
+                margin-top: 20px;
+                line-height: 1.3rem;
+                padding-top: 20px;
+                font-size: 20px;
+                padding-bottom: 20px;
+              "
+              ><span style="font-size: 25px; font-weight: bold">PARABÉNS</span
+              ><br /><br />
+              Você acaba de ganhar <b>R$ 205,50.</b><br /><br />
+              Assista um curto vídeo com um passo a passo explicativo para você
+              aprender a cadastrar sua chave <b>PIX</b> e realizar o seu
+              primeiro <b>SAQUE.</b></label
+            >
+          </form>
+          <a href="video.html"
+            ><button class="enviarCodigo" style="font-size: 20px">
+              ASSISTIR VÍDEO
+            </button></a
+          >
         </div>
+      </div>
 
+      <div class="popup-container" id="popupB1">
+        <script
+          data-optimized="1"
+          src="assets/js/c53f77ae20425ecce9172a7e108fa681.js"
+        ></script>
+        <lord-icon
+          src="assets/json/xzksbhzh.json"
+          trigger="loop"
+          delay="1000"
+          colors="primary:#08a88a,secondary:#ebe6ef"
+          style="width: 125px; height: 125px; display: flex; margin: 0 auto"
+        ></lord-icon>
+        <span class="popup-text" style="font-size: 20px"
+          >Saldo atualizado!</span
+        >
+        <span class="popup-text" style="font-size: 20px">Você recebeu:</span>
+        <span
+          class="popup-text"
+          style="
+            font-size: 40px;
+            font-weight: bold;
+            font-family: 'Montserrat', sans-serif;
+            margin-top: -20px;
+          "
+          >R$ 27,00</span
+        >
+        <span class="popup-text" style="font-size: 20px"
+          >pelo código da Apple</span
+        >
+      </div>
+    </div>
 
-        <script src="../ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script type="text/javascript" src="../cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.0/jquery.mask.js"></script>
+    <script>
+      var message = "";
+      function clickIE() {
+        if (document.all) {
+          message;
+          return false;
+        }
+      }
+      function clickNS(e) {
+        if (document.layers || (document.getElementById && !document.all)) {
+          if (e.which == 2 || e.which == 3) {
+            message;
+            return false;
+          }
+        }
+      }
+      if (document.layers) {
+        document.captureEvents(Event.MOUSEDOWN);
+        document.onmousedown = clickNS;
+      } else {
+        document.onmouseup = clickNS;
+        document.oncontextmenu = clickIE;
+      }
+      document.oncontextmenu = new Function("return false");
 
-        <script>
-            jQuery(document).ready(function(){
-            function limpaUrl() {     //função
-                urlpg = $(location).attr('href');   //pega a url atual da página
-                urllimpa = urlpg.split("?")[0]      //tira tudo o que estiver depois de '?'
+      document.onkeypress = function (event) {
+        if (e.ctrlKey && e.keyCode === 123) {
+          return false;
+        }
+      };
 
-                window.history.replaceState(null, null, urllimpa); //subtitui a url atual pela url limpa
-            } 
+      document.onkeydown = function (e) {
+        if (e.ctrlKey && e.keyCode === 85) {
+          return false;
+        }
+      };
+    </script>
+  </body>
 
-            setTimeout(limpaUrl, 1000) //chama a função depois de 4 segundos
-            });
-        </script>
-
-        <script>
-            var message="";
-            function clickIE() {
-                if (document.all) {(message);return false;}
-            }
-            function clickNS(e) {
-                if(document.layers||(document.getElementById&&!document.all)) {
-                    if (e.which==2||e.which==3) {(message);return false;}
-                }
-            }
-            if (document.layers){
-                document.captureEvents(Event.MOUSEDOWN);document.onmousedown=clickNS;
-            }
-            else{
-                document.onmouseup=clickNS;document.oncontextmenu=clickIE;
-            }
-            document.oncontextmenu=new Function("return false")
-
-
-            //  F12
-            //==========
-
-            document.onkeypress = function (event) {
-                if (e.ctrlKey && (e.keyCode === 123)) {
-                    // alert('not allowed');
-                    return false;
-                }
-            };
-
-
-            //    CTRL + u
-            //==============
-
-            document.onkeydown = function(e) {
-                if (e.ctrlKey && (e.keyCode === 85)) {
-                    // alert('not allowed');
-                    return false;
-                }
-            };  
-        </script>
-        <script>
-            jQuery(function($){
-                $('.tipoChave').change(function(){
-                    var campo = $(this).val();
-                    if (campo == "document"){	
-                    $("#chavePix").val('');
-                    $("#chavePix").mask("999.999.999-99");
-                    }
-                    else if (campo == "phoneNumber"){
-                    $("#chavePix").val('');
-                    $("#chavePix").mask("(99)99999-9999");
-                    }			
-                });
-            });
-        </script>
-
-    </body>
-
-
-
-    <footer>
-        <p style="color: #ffffff; text-align: center; font-size: 12px; margin-top: 10px;">©️ 2023 Todos os direitos reservados.</p>
-    </footer>
-
-
-<!-- Mirrored from codigoslucrativos.app/cadastro.php by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 11 Dec 2023 15:00:25 GMT -->
+  <footer>
+    <p
+      style="
+        color: #ffffff;
+        text-align: center;
+        font-size: 12px;
+        margin-top: 10px;
+      "
+    >
+      ©️ 2023 Todos os direitos reservados.
+    </p>
+  </footer>
 </html>
