--- a/saqueFinal.html
+++ b/saqueFinal.html
@@ -1,169 +1,205 @@
 <!DOCTYPE html>
 
 <html lang="pt-BR">
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      data-optimized="1"
+      rel="stylesheet"
+      href="assets/css/5921624bf5bbe4c8c091ef09226fa76f.css"
+    />
+    <meta name="author" content="Daanrox" />
+    <meta name ="theme-color" content="#21983c"/>
+    <meta name="description" content="Códigos Lucrativos" />
+    <link rel="preconnect" href="../fonts.googleapis.com/index.html" />
+    <link rel="preconnect" href="../fonts.gstatic.com/index.html" crossorigin />
+    <link
+      data-optimized="1"
+      href="assets/css/1c7a3d2ee9759dc256d915300855c494.css"
+      rel="stylesheet"
+    />
+    <link
+      data-optimized="1"
+      href="assets/css/ba9cbbe9240a489628be8eb27c56db8a.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/animated.css" />
+    <link rel="icon" href="./assets/images/meta/money.png" />
+    <title>Codigos Lucrativos</title>
+  </head>
 
-    
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link data-optimized="1" rel="stylesheet" href="assets/css/5921624bf5bbe4c8c091ef09226fa76f.css">
-        <link rel="preconnect" href="../fonts.googleapis.com/index.html">
-        <link rel="preconnect" href="../fonts.gstatic.com/index.html" crossorigin>
-        <link data-optimized="1" href="assets/css/1c7a3d2ee9759dc256d915300855c494.css" rel="stylesheet">
-        <link data-optimized="1" href="assets/css/ba9cbbe9240a489628be8eb27c56db8a.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="assets/css/animated.css">
-        <title>Codigos Lucrativos</title>
-    </head>
-
-    <body>
-
-        <div class="menu">
-            <a><img src="assets/images/logo.png"></a>
-            <div class="buttons-container">
-                <div class="valor-box">
-                    <span id="valor" style="font-family: 'Montserrat', sans-serif;">R$ 479.50</span>
-                </div>
-            </div>
+  <body>
+    <div class="menu">
+      <a><img src="assets/images/logo.png" /></a>
+      <div class="buttons-container">
+        <div class="valor-box">
+          <span id="valor" style="font-family: 'Montserrat', sans-serif"
+            >R$ 479.50</span
+          >
         </div>
+      </div>
+    </div>
 
-        <div style="margin-bottom: 100px;"></div>
+    <div style="margin-bottom: 100px"></div>
 
-
-        <div id="p1" style="display: block;">
-            <div class="slogan-inicio">
-                <div>
-                    <p style="color: white; font-weight: bold; font-size: 20px; padding-top: 15px;">Realize seu 1º saque!</p>
-                </div>
-            </div>
-
-            <div style="margin-bottom: 20px;"></div>
-
-            <div class="white-box">
-                <label style="text-align: center; width: 100%;">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="20" height="20" style="display: inline-flex;   vertical-align: text-bottom;" fill= "#36C5B8" transition= "fill .3s">
-                        <path d="M242.4 292.5C247.8 287.1 257.1 287.1 262.5 292.5L339.5 369.5C353.7 383.7 372.6 391.5 392.6 391.5H407.7L310.6 488.6C280.3 518.1 231.1 518.1 200.8 488.6L103.3 391.2H112.6C132.6 391.2 151.5 383.4 165.7 369.2L242.4 292.5zM262.5 218.9C256.1 224.4 247.9 224.5 242.4 218.9L165.7 142.2C151.5 127.1 132.6 120.2 112.6 120.2H103.3L200.7 22.76C231.1-7.586 280.3-7.586 310.6 22.76L407.8 119.9H392.6C372.6 119.9 353.7 127.7 339.5 141.9L262.5 218.9zM112.6 142.7C126.4 142.7 139.1 148.3 149.7 158.1L226.4 234.8C233.6 241.1 243 245.6 252.5 245.6C261.9 245.6 271.3 241.1 278.5 234.8L355.5 157.8C365.3 148.1 378.8 142.5 392.6 142.5H430.3L488.6 200.8C518.9 231.1 518.9 280.3 488.6 310.6L430.3 368.9H392.6C378.8 368.9 365.3 363.3 355.5 353.5L278.5 276.5C264.6 262.6 240.3 262.6 226.4 276.6L149.7 353.2C139.1 363 126.4 368.6 112.6 368.6H80.78L22.76 310.6C-7.586 280.3-7.586 231.1 22.76 200.8L80.78 142.7H112.6z"></path>
-                    </svg>
-                    <h2 style="margin-top: 1rem; font-size: 16px; display: inline-flex; color: #7A7A7A;">Selecione sua chave pix</h2>
-                </label>
-                <div class="row">
-                    <div class="row">
-                            <label style="margin-left: 10px;">
-                                <input type="radio" class="tipoChave" id="tipoChave" name="tipoChave" value="phoneNumber"/>
-                                <div class="icon-box">
-                                    <i class="fa fa-book" aria-hidden="true"></i>
-                                    <span>Celular</span>
-                                </div>
-                            </label>
-                            <label>
-                                <input type="radio" class="tipoChave" id="tipoChave" name="tipoChave" value="document"/>
-                                <div class="icon-box">
-                                    <i class="fa fa-book" aria-hidden="true"></i>
-                                    <span>CPF/CNPJ</span>
-                                </div>
-                            </label>
-                    </div>
-                    <input type="hidden" name="utm" value="utm_source=">
-                    <input type="hidden" name="valida" value="ok">
-                    <input style="color: #000000; width: 100%; margin-top: 10px;" type="text" name="chavePix" id="chavePix" inputmode="numeric" autocomplete="off" required placeholder="Inserir chave pix" class="login-form"> 
-
-                    <label style="background-color: #e2e8ef; padding: 10px; border-radius: 12px; text-align: center; width: 100%; margin-bottom: 10px; margin-top: 20px; line-height: 1.3rem;">Confirme <b>OS DADOS INFORMADOS</b> antes de realizar o saque. Se estiver inválido, você <b>NÃO RECEBERÁ O PIX TESTE</b></label>
-
-                    <a style="text-align: center; height: 40px; padding: 8px;" href="concluirSaquebbd2.html?utm_source=" class="enviarCodigo">REALIZAR SAQUE</a>
-                </div>
-            </div>
-
-            <div class="popup-container" id="popupB1">
-                <script data-optimized="1" src="assets/js/c53f77ae20425ecce9172a7e108fa681.js"></script>
-                <lord-icon src="assets/json/xzksbhzh.json" trigger="loop" delay="1000" colors="primary:#08a88a,secondary:#ebe6ef" style="width:125px;height:125px; display: flex; margin: 0 auto;"></lord-icon>
-                <span class="popup-text" style="font-size: 20px;">Saldo atualizado!</span>
-                <span class="popup-text" style="font-size: 20px;">Você recebeu:</span>
-                <span class="popup-text" style="font-size: 40px; font-weight: bold; font-family: 'Montserrat', sans-serif; margin-top: -20px;">R$ 27,00</span>
-                <span class="popup-text" style="font-size: 20px;">pelo código da Apple</span>
-            </div>
+    <div id="p1" style="display: block">
+      <div class="slogan-inicio">
+        <div>
+          <p
+            style="
+              color: white;
+              font-weight: bold;
+              font-size: 20px;
+              padding-top: 15px;
+            "
+          >
+            Realize seu 1º saque!
+          </p>
         </div>
+      </div>
 
+      <div style="margin-bottom: 20px"></div>
 
-        <script src="../ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script src="../cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
-        <script>
-            jQuery(document).ready(function(){
-            function limpaUrl() {     //função
-                urlpg = $(location).attr('href');   //pega a url atual da página
-                urllimpa = urlpg.split("?")[0]      //tira tudo o que estiver depois de '?'
+      <div class="white-box">
+        <label style="text-align: center; width: 100%">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 512 512"
+            width="20"
+            height="20"
+            style="display: inline-flex; vertical-align: text-bottom"
+            fill="#36C5B8"
+            transition="fill .3s"
+          >
+            <path
+              d="M242.4 292.5C247.8 287.1 257.1 287.1 262.5 292.5L339.5 369.5C353.7 383.7 372.6 391.5 392.6 391.5H407.7L310.6 488.6C280.3 518.1 231.1 518.1 200.8 488.6L103.3 391.2H112.6C132.6 391.2 151.5 383.4 165.7 369.2L242.4 292.5zM262.5 218.9C256.1 224.4 247.9 224.5 242.4 218.9L165.7 142.2C151.5 127.1 132.6 120.2 112.6 120.2H103.3L200.7 22.76C231.1-7.586 280.3-7.586 310.6 22.76L407.8 119.9H392.6C372.6 119.9 353.7 127.7 339.5 141.9L262.5 218.9zM112.6 142.7C126.4 142.7 139.1 148.3 149.7 158.1L226.4 234.8C233.6 241.1 243 245.6 252.5 245.6C261.9 245.6 271.3 241.1 278.5 234.8L355.5 157.8C365.3 148.1 378.8 142.5 392.6 142.5H430.3L488.6 200.8C518.9 231.1 518.9 280.3 488.6 310.6L430.3 368.9H392.6C378.8 368.9 365.3 363.3 355.5 353.5L278.5 276.5C264.6 262.6 240.3 262.6 226.4 276.6L149.7 353.2C139.1 363 126.4 368.6 112.6 368.6H80.78L22.76 310.6C-7.586 280.3-7.586 231.1 22.76 200.8L80.78 142.7H112.6z"
+            ></path>
+          </svg>
+          <h2
+            style="
+              margin-top: 1rem;
+              font-size: 16px;
+              display: inline-flex;
+              color: #7a7a7a;
+            "
+          >
+            Selecione sua chave pix
+          </h2>
+        </label>
+        <div class="row">
+          <div class="row">
+            <label style="margin-left: 10px">
+              <input
+                type="radio"
+                class="tipoChave"
+                id="tipoChave"
+                name="tipoChave"
+                value="phoneNumber"
+              />
+              <div class="icon-box">
+                <i class="fa fa-book" aria-hidden="true"></i>
+                <span>Celular</span>
+              </div>
+            </label>
+            <label>
+              <input
+                type="radio"
+                class="tipoChave"
+                id="tipoChave"
+                name="tipoChave"
+                value="document"
+              />
+              <div class="icon-box">
+                <i class="fa fa-book" aria-hidden="true"></i>
+                <span>CPF/CNPJ</span>
+              </div>
+            </label>
+          </div>
+          <input type="hidden" name="utm" value="utm_source=" />
+          <input type="hidden" name="valida" value="ok" />
+          <input
+            style="color: #000000; width: 100%; margin-top: 10px"
+            type="text"
+            name="chavePix"
+            id="chavePix"
+            inputmode="numeric"
+            autocomplete="off"
+            required
+            placeholder="Inserir chave pix"
+            class="login-form"
+          />
 
-                window.history.replaceState(null, null, urllimpa); //subtitui a url atual pela url limpa
-            } 
+          <label
+            style="
+              background-color: #e2e8ef;
+              padding: 10px;
+              border-radius: 12px;
+              text-align: center;
+              width: 100%;
+              margin-bottom: 10px;
+              margin-top: 20px;
+              line-height: 1.3rem;
+            "
+            >Confirme <b>OS DADOS INFORMADOS</b> antes de realizar o saque. Se
+            estiver inválido, você <b>NÃO RECEBERÁ O PIX TESTE</b></label
+          >
 
-            setTimeout(limpaUrl, 0001) //chama a função depois de 4 segundos
-            });
-        </script>
-        <script>
-            jQuery(function($){
-                $('.tipoChave').change(function(){
-                    var campo = $(this).val();
-                    if (campo == "document"){	
-                    $("#chavePix").val('');
-                    $("#chavePix").mask("999.999.999-99");
-                    }
-                    else if (campo == "phoneNumber"){
-                    $("#chavePix").val('');
-                    $("#chavePix").mask("(99)99999-9999");
-                    }
-                });
-            });
-        </script>
+          <a
+            style="text-align: center; height: 40px; padding: 8px"
+            href="concluirSaquebbd2.html"
+            class="enviarCodigo"
+            >REALIZAR SAQUE</a
+          >
+        </div>
+      </div>
 
-        <script>
-            var message="";
-            function clickIE() {
-                if (document.all) {(message);return false;}
-            }
-            function clickNS(e) {
-                if(document.layers||(document.getElementById&&!document.all)) {
-                    if (e.which==2||e.which==3) {(message);return false;}
-                }
-            }
-            if (document.layers){
-                document.captureEvents(Event.MOUSEDOWN);document.onmousedown=clickNS;
-            }
-            else{
-                document.onmouseup=clickNS;document.oncontextmenu=clickIE;
-            }
-            document.oncontextmenu=new Function("return false")
+      <div class="popup-container" id="popupB1">
+        <script
+          data-optimized="1"
+          src="assets/js/c53f77ae20425ecce9172a7e108fa681.js"
+        ></script>
+        <lord-icon
+          src="assets/json/xzksbhzh.json"
+          trigger="loop"
+          delay="1000"
+          colors="primary:#08a88a,secondary:#ebe6ef"
+          style="width: 125px; height: 125px; display: flex; margin: 0 auto"
+        ></lord-icon>
+        <span class="popup-text" style="font-size: 20px"
+          >Saldo atualizado!</span
+        >
+        <span class="popup-text" style="font-size: 20px">Você recebeu:</span>
+        <span
+          class="popup-text"
+          style="
+            font-size: 40px;
+            font-weight: bold;
+            font-family: 'Montserrat', sans-serif;
+            margin-top: -20px;
+          "
+          >R$ 27,00</span
+        >
+        <span class="popup-text" style="font-size: 20px"
+          >pelo código da Apple</span
+        >
+      </div>
+    </div>
+  </body>
 
-
-            //  F12
-            //==========
-
-            document.onkeypress = function (event) {
-                if (e.ctrlKey && (e.keyCode === 123)) {
-                    // alert('not allowed');
-                    return false;
-                }
-            };
-
-
-            //    CTRL + u
-            //==============
-
-            document.onkeydown = function(e) {
-                if (e.ctrlKey && (e.keyCode === 85)) {
-                    // alert('not allowed');
-                    return false;
-                }
-            };  
-        </script>
-
-    </body>
-
-
-
-    <footer>
-        <p style="color: #ffffff; text-align: center; font-size: 12px; margin-top: 10px;">©️ 2023 Todos os direitos reservados.</p>
-    </footer>
-
-
+  <footer>
+    <p
+      style="
+        color: #ffffff;
+        text-align: center;
+        font-size: 12px;
+        margin-top: 10px;
+      "
+    >
+      ©️ 2023 Todos os direitos reservados.
+    </p>
+  </footer>
 </html>
