--- a/api2.html
+++ b/api2.html
@@ -1,180 +1,159 @@
 <!DOCTYPE html>
 
 <html lang="pt-BR">
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      data-optimized="1"
+      rel="stylesheet"
+      href="assets/css/5921624bf5bbe4c8c091ef09226fa76f.css"
+    />
+    <meta name="author" content="Daanrox" />
+    <meta name ="theme-color" content="#21983c"/>
+    <meta name="description" content="Códigos Lucrativos" />
+    <link rel="preconnect" href="../fonts.googleapis.com/index.html" />
+    <link rel="preconnect" href="../fonts.gstatic.com/index.html" crossorigin />
+    <link
+      data-optimized="1"
+      href="assets/css/1c7a3d2ee9759dc256d915300855c494.css"
+      rel="stylesheet"
+    />
+    <link
+      data-optimized="1"
+      href="assets/css/ba9cbbe9240a489628be8eb27c56db8a.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/animated.css" />
+    <link rel="icon" href="./assets/images/meta/money.png" />
+    <title>Codigos Lucrativos</title>
+  </head>
 
-    
-<!-- Mirrored from codigosmoney.app/sucesso.php? by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 11 Dec 2023 14:04:43 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
-<head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link data-optimized="1" rel="stylesheet" href="assets/css/5921624bf5bbe4c8c091ef09226fa76f.css">
-        <link rel="preconnect" href="../fonts.googleapis.com/index.html">
-        <link rel="preconnect" href="../fonts.gstatic.com/index.html" crossorigin>
-        <link data-optimized="1" href="assets/css/1c7a3d2ee9759dc256d915300855c494.css" rel="stylesheet">
-        <link data-optimized="1" href="assets/css/ba9cbbe9240a489628be8eb27c56db8a.css" rel="stylesheet">
-        <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="assets/css/animated.css">
-        <title>Codigos Lucrativos</title>
-    </head>
-
-    <body>
-
-        <div class="menu">
-            <a><img src="assets/images/logo.png"></a>
-            <div class="buttons-container">
-                <div class="valor-box">
-                    <span id="valor" style="font-family: 'Montserrat', sans-serif;">R$ 205.50</span>
-                </div>
-            </div>
+  <body>
+    <div class="menu">
+      <a><img src="assets/images/logo.png" /></a>
+      <div class="buttons-container">
+        <div class="valor-box">
+          <span id="valor" style="font-family: 'Montserrat', sans-serif"
+            >R$ 205.50</span
+          >
         </div>
+      </div>
+    </div>
 
-        <div style="margin-bottom: 100px;"></div>
+    <div style="margin-bottom: 100px"></div>
 
-
-        <div id="p1" style="display: block;">
-            <div class="slogan-inicio">
-                <div>
-                    <p style="color: white; font-weight: bold; font-size: 20px; padding-top: 15px;">Você já resgatou!</p>
-                </div>
-            </div>
-
-            <div style="margin-bottom: 20px;"></div>
-
-            <div class="white-box">
-                <label style="background-color: #e2e8ef; padding: 10px; border-radius: 12px; text-align: center; width: 100%; margin-bottom: 10px; line-height: 1.3rem;">Você já recebeu o seu saque teste de <b>10 CENTAVOS</b> em nome de <b>"Suitpay".</b> Verifique suas notificações ou extrato bancário!</label>
-                <label style="background-color: #e2e8ef; padding: 10px; border-radius: 12px; text-align: center; width: 100%; margin-bottom: 10px; line-height: 1.3rem;">Agora basta <b>realizar</b> mais 7 confirmações de códigos para realizar seu <b>1º saque!</b></label>
-                <div class="row">
-                    <a style="height: 50px; text-align: center; padding: 13px;" href="codappd41d.html?"  class="enviarCodigo">CONTINUAR</a>
-                </div>
-            </div>
-
-            <div class="popup-container" id="popupB1">
-                <script data-optimized="1" src="assets/js/c53f77ae20425ecce9172a7e108fa681.js"></script>
-                <lord-icon src="assets/json/xzksbhzh.json" trigger="loop" delay="1000" colors="primary:#08a88a,secondary:#ebe6ef" style="width:125px;height:125px; display: flex; margin: 0 auto;"></lord-icon>
-                <span class="popup-text" style="font-size: 20px;">Saldo atualizado!</span>
-                <span class="popup-text" style="font-size: 20px;">Você recebeu:</span>
-                <span class="popup-text" style="font-size: 40px; font-weight: bold; font-family: 'Montserrat', sans-serif; margin-top: -20px;">R$ 27,00</span>
-                <span class="popup-text" style="font-size: 20px;">pelo código da Apple</span>
-            </div>
+    <div id="p1" style="display: block">
+      <div class="slogan-inicio">
+        <div>
+          <p
+            style="
+              color: white;
+              font-weight: bold;
+              font-size: 20px;
+              padding-top: 15px;
+            "
+          >
+            Você já resgatou!
+          </p>
         </div>
-<!--         <script>
-            setTimeout(
-                ()=>{
-                    window.location.href='codappd41d.html?'
-                }, 6000
-            )
-            </script> -->
+      </div>
 
-        <script src="../ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script src="../cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.10/jquery.mask.js"></script>
-        <script>
-            jQuery(document).ready(function(){
-            function limpaUrl() {     //função
-                urlpg = $(location).attr('href');   //pega a url atual da página
-                urllimpa = urlpg.split("?")[0]      //tira tudo o que estiver depois de '?'
+      <div style="margin-bottom: 20px"></div>
 
-                window.history.replaceState(null, null, urllimpa); //subtitui a url atual pela url limpa
-            } 
+      <div class="white-box">
+        <label
+          style="
+            background-color: #e2e8ef;
+            padding: 10px;
+            border-radius: 12px;
+            text-align: center;
+            width: 100%;
+            margin-bottom: 10px;
+            line-height: 1.3rem;
+          "
+          >Você já recebeu o seu saque teste de <b>10 CENTAVOS</b> em nome de
+          <b>"Suitpay".</b> Verifique suas notificações ou extrato
+          bancário!</label
+        >
+        <label
+          style="
+            background-color: #e2e8ef;
+            padding: 10px;
+            border-radius: 12px;
+            text-align: center;
+            width: 100%;
+            margin-bottom: 10px;
+            line-height: 1.3rem;
+          "
+          >Agora basta <b>realizar</b> mais 7 confirmações de códigos para
+          realizar seu <b>1º saque!</b></label
+        >
+        <div class="row">
+          <a
+            style="height: 50px; text-align: center; padding: 13px"
+            href="codappd41d.html"
+            class="enviarCodigo"
+            >CONTINUAR</a
+          >
+        </div>
+      </div>
 
-            setTimeout(limpaUrl, 0001) //chama a função depois de 4 segundos
-            });
+     
+    </div>
 
-            function queryString(parameter) {  
-                var loc = location.search.substring(1, location.search.length);   
-                var param_value = false;   
-                var params = loc.split("&");   
-                for (i=0; i<params.length;i++) {   
-                    param_name = params[i].substring(0,params[i].indexOf('='));   
-                    if (param_name == parameter) {                                          
-                        param_value = params[i].substring(params[i].indexOf('=')+1)   
-                    }   
-                }   
-                if (param_value) {   
-                    return param_value;   
-                }   
-                else {   
-                    return false;   
-                }   
-            }
+    <script>
+      var message = "";
+      function clickIE() {
+        if (document.all) {
+          message;
+          return false;
+        }
+      }
+      function clickNS(e) {
+        if (document.layers || (document.getElementById && !document.all)) {
+          if (e.which == 2 || e.which == 3) {
+            message;
+            return false;
+          }
+        }
+      }
+      if (document.layers) {
+        document.captureEvents(Event.MOUSEDOWN);
+        document.onmousedown = clickNS;
+      } else {
+        document.onmouseup = clickNS;
+        document.oncontextmenu = clickIE;
+      }
+      document.oncontextmenu = new Function("return false");
 
-            var utm = queryString("utm_source");
-            history.pushState({}, "", location.href);
-            history.pushState({}, "", location.href);
-            window.onpopstate = function () {
-                setTimeout(function() {
-                    window.location.href = "coddappbbd2.html?utm_source="+utm;
-                }, 0001);
-            };
-        </script>
+      document.onkeypress = function (event) {
+        if (e.ctrlKey && e.keyCode === 123) {
+          return false;
+        }
+      };
 
-        <script>
-            var message="";
-            function clickIE() {
-                if (document.all) {(message);return false;}
-            }
-            function clickNS(e) {
-                if(document.layers||(document.getElementById&&!document.all)) {
-                    if (e.which==2||e.which==3) {(message);return false;}
-                }
-            }
-            if (document.layers){
-                document.captureEvents(Event.MOUSEDOWN);document.onmousedown=clickNS;
-            }
-            else{
-                document.onmouseup=clickNS;document.oncontextmenu=clickIE;
-            }
-            document.oncontextmenu=new Function("return false")
+      document.onkeydown = function (e) {
+        if (e.ctrlKey && e.keyCode === 85) {
+          return false;
+        }
+      };
+    </script>
+  </body>
 
-
-            //  F12
-            //==========
-
-            document.onkeypress = function (event) {
-                if (e.ctrlKey && (e.keyCode === 123)) {
-                    // alert('not allowed');
-                    return false;
-                }
-            };
-
-
-            //    CTRL + u
-            //==============
-
-            document.onkeydown = function(e) {
-                if (e.ctrlKey && (e.keyCode === 85)) {
-                    // alert('not allowed');
-                    return false;
-                }
-            };  
-        </script>
-
-        <script>
-            $("#tipoChave").change(function() {
-                addMaskToInput();
-            });
-
-            function addMaskToInput() {
-                var $select = $('#tipoChave option:selected').val();
-                var $busca = $('#chavePix');
-                if ($select == "document") {
-                $busca.mask('999.999.999-99');
-                }
-                if ($select == "phoneNumber") {
-                $busca.mask('(99)99999-9999');
-                }
-            }
-        </script>
-
-    </body>
-
-
-
-    <footer>
-        <p style="color: #ffffff; text-align: center; font-size: 12px; margin-top: 10px;">©️ 2023 Todos os direitos reservados.</p>
-    </footer>
-
-
-<!-- Mirrored from codigosmoney.app/sucesso.php? by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 11 Dec 2023 14:04:47 GMT -->
+  <footer>
+    <p
+      style="
+        color: #ffffff;
+        text-align: center;
+        font-size: 12px;
+        margin-top: 10px;
+      "
+    >
+      ©️ 2023 Todos os direitos reservados.
+    </p>
+  </footer>
 </html>
